style.css
:root {

/* ================ COLORS ================ */
--clr-primary: #2563eb;
--clr-primary-hover: #1d4ed8;
--clr-secondary: #0ea5e9;

--clr-bg: #0a0a0a;
--clr-surface: #1e293b;

--clr-text-primary: #fefefe;
--clr-text-secondary: rgba(231, 229, 228, 0.7);

--clr-border: #4a4a4a;
--clr-border-bg: rgba(27, 27, 27, 1);

/* ============ FONTS ============ */
--ff-primary: "Raleway", sans-serif;

/* ============ FONT SIZES ============ */
--fs-xs: 0.75rem;
--fs-sm: 0.875rem;
--fs-md: 1rem;
--fs-lg: 1.125rem;
--fs-xl: 1.25rem;
--fs-2xl: 1.5rem;
--fs-3xl: 1.875rem;
--fs-4xl: 2.25rem;
--fs-5xl: 3rem;
--fs-6xl: 3.5rem;
--fs-7xl: 3.75rem;

/* ============ FONT WEIGHTS ============ */
--fw-light: 300;
--fw-regular: 400;
--fw-medium: 500;
--fw-semibold: 600;
--fw-bold: 700;
--fw-extrabold: 800;

/* ============ SPACING ============ */
--space-xs: 0.25rem;
--space-sm: 0.5rem;
--space-md: 1rem;
--space-lg: 2rem;
--space-xl: 3rem;
--space-2xl: 4rem;
--space-3xl: 5rem;

/* ============ BORDER RADIUS ============ */
--radius-sm: 4px;
--radius-md: 8px;
--radius-lg: 12px;
--radius-xl: 16px;
}

html {
  scroll-behavior: smooth;
}

*, *::after, *::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

ul, li, a {
  list-style: none;
  text-decoration: none;
}

body {
  margin: 0;
  min-height: 100%;
  font-family: var(--ff-primary);
  background-color: var(--clr-bg);
}

main {
  width: 100%;
  padding: 0 2rem;
}

/* ============ HERO SECTION ============ */
.hero {
  position: relative;
  height: 100svh;
  overflow: hidden;

  display: flex;
  flex-direction: column;
  align-items: center;

  color: white;
  text-align: center;
}

/* ============ BACKGROUND GRID ============ */
.hero .grid {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  background-image:
  linear-gradient(to right, rgba(255,255,255,0.05) 1px, transparent 1px),
  linear-gradient(to bottom, rgba(255,255,255,0.05) 1px, transparent 1px);

  background-size: 40px 40px;

  -webkit-mask-image:
  linear-gradient(to bottom, transparent 0%, black 10%, black 80%, transparent 100%),
  linear-gradient(to right, transparent 0%, black 2%, black 98%, transparent 100%);

  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: 100% 100%;
  -webkit-mask-composite: destination-in;

  mask-image:
  linear-gradient(to bottom, transparent 0%, black 10%, black 80%, transparent 100%),
  linear-gradient(to right, transparent 0%, black 2%, black 98%, transparent 100%);

  mask-repeat: no-repeat;
  mask-size: 100% 100%;
  mask-composite: intersect;

  z-index: 0;
  pointer-events: none;
}

/* ============ NAV BAR ============ */
.hero .nav-bar {
  margin: var(--space-lg) auto;
}

.nav-bar .icon {
  display: none;
  width: 24px;
  margin-top: 4px;
}

.nav-bar ul {
  display: flex;
  padding: var(--space-md) var(--space-lg);
  gap: var(--space-md);
  background-color: var(--clr-border-bg);
  border: 1px solid var(--clr-border);
  border-radius: var(--radius-md);
}

.nav-bar li a {
  display: block;
  color: var(--clr-text-primary);
  font-weight: var(--fw-semibold);
  cursor: pointer;
  transition: text-shadow .2s ease;
  width: 4rem;
}

.nav-bar li a:hover {
  text-shadow: 0 0 10px rgba(255,255,255, 1);
}

/* ============ HERO CONTENT ============ */
.hero-content {
  position: relative;
  z-index: 1;
  margin-top: var(--space-lg);
}

/* ============ AVAILABLE ============ */
.hero .available {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: var(--space-sm);

  color: var(--clr-text-primary);
  font-size: var(--fs-sm);
  font-weight: var(--fw-medium);

  padding: var(--space-sm) var(--space-md);
  margin: 0 auto var(--space-lg);
  width: fit-content;

  border: 1px solid var(--clr-border);
  border-radius: var(--radius-xl);
  background-color: #000;

  box-shadow: 0 0 2px white, 0 0 5px white;
  animation: glow 3s infinite ease;
  text-align: center;
  position: relative;
}

@keyframes glow {
  0% { box-shadow: 0 0 2px white, 0 0 5px white; }
  50% { box-shadow: 0 0 4px white, 0 0 10px white; }
  100% { box-shadow: 0 0 2px white, 0 0 5px white; }
}

.hero .available::before {
  content: "";
  width: 8px;
  height: 8px;
  background-color: #00ff00;
  border-radius: 50%;
  box-shadow: 0 0 4px #00ff00;
}

/* ============ NAME AND ROLE ============ */

.hero-content address {
  color: var(--clr-text-secondary);
  font-size: var(--fs-sm);
  font-weight: var(--fw-bold);
  font-style: normal;
  text-transform: uppercase;
  letter-spacing: 1px;
  margin-bottom: var(--space-md);
}

.hero-content h1{
  font-size: clamp(var(--fs-3xl), 8vw, var(--fs-7xl));
  margin: 0;
}

.hero-content h2 {
  font-size: clamp(var(--fs-lg), 5vw, var(--fs-4xl));
  margin: 0;
}

.hero-content h2 + p {
  color: var(--clr-text-secondary);
  font-size: clamp(var(--fs-sm), 2vw, var(--fs-lg));
  font-weight: var(--fw-medium);
  max-width: 700px;
  margin: var(--space-sm) auto var(--space-md);
  line-height: 1.5;
}

/* ============ SOCIALS ============ */

.socials {
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: var(--space-md);
}

.socials a {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: var(--space-sm);

  color: var(--clr-text-primary);
  font-size: var(--fs-md);
  font-weight: var(--fw-medium);

  padding: var(--space-sm) var(--space-lg);

  border: 1px solid var(--clr-border);
  border-radius: var(--radius-md);
  background-color: var(--clr-border-bg);

  cursor: pointer;
  position: relative;
  overflow: hidden;
  transition: background-color 0.3s ease;
}

.socials li a:hover {
  background-color: rgba(35, 35, 35, 1);
}

.socials li a::before {
  content: "";
  position: absolute;
  top: 0;
  left: -50%;
  width: 5%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.3);
  pointer-events: none;
  filter: blur(15px);
  transform: skewX(-25deg);
  animation: sweepGlow 2s linear infinite;
}

@keyframes sweepGlow {
  0% { left: -50%; }
  100% { left: 150%; }
}

.github img {
  width: 25px;
}

/* ================ PROJECT SECTION  ================ */

.project {
  max-width: 1000px;
  margin: 0 auto;
}

.project h2 {
  color: var(--clr-text-primary);
  font-size: clamp(var(--fs-3xl), 8vw, var(--fs-5xl));
  font-weight: var(--fw-bold);

  margin-bottom: var(--space-md);
  padding: var(--space-xl) 0 0;
}

/* ================ PROJECT CONTAINER  ================ */

.projects-container {
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  gap: var(--space-lg);
}

.projects-container .project-card {
  display: flex;
  flex-direction: column;

  background-color: #171717;
  border: 1px solid var(--clr-border);
  border-radius: var(--radius-lg);

  overflow: hidden;
  color: var(--clr-text-primary);
}

.project-image img {
  display: block;
  width: 100%;
  object-fit: cover;
}

.projects-container .project-details {
  display: flex;
  flex-direction: column;
  gap: var(--space-sm);

  padding: var(--space-md);
}

.projects-container h3 {
  font-size: var(--fs-lg);
  font-weight: var(--fw-bold);
}

.projects-container ul {
  display: flex;
  gap: var(--space-sm);
  margin: var(--space-sm) 0;
}

.projects-container .project-tech-icon {
  width: 2rem;
  height: 2rem;

  border-radius: var(--radius-sm);
  padding: var(--space-xs);
}

.projects-container .project-tech-icon img {
  width: 100%;
  object-fit: cover;
}

.projects-container p {
  color: var(--clr-text-primary);
  font-size: var(--fs-sm);
  font-weight: var(--fw-regular);
  line-height: 1.5;
}

/* ============ TECHNOLOGY SECTION  ============ */

.technology {
  max-width: 1000px;
  margin: 0 auto;

  display: flex;
  flex-direction: column;

  color: white;
  text-align: left;
  padding: var(--space-xl) 0;
}

/* ============ TECHNOLOGY HEADER  ============ */

.technology header {
  margin-bottom: var(--space-lg);
}

.technology header h2 {
  font-size: clamp(var(--fs-3xl), 8vw, var(--fs-5xl));
  font-weight: var(--fw-bold);
  margin-bottom: var(--space-md);
}

.technology header p {
  font-size: var(--fs-sm);
  color: var(--clr-text-secondary);
  font-weight: var(--fw-medium);
  line-height: 1.5;
  max-width: 56rem;
}

/* ============ TECHNOLOGY CONTAINER  ============ */

.technology-container {
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  gap: var(--space-md);
}

/* ============ TECHNOLOGY CARDS  ============ */

.technology-container .technology-card {
  display: flex;
  gap: var(--space-md);
  padding: var(--space-sm);

  background-color: var(--clr-border-bg);

  border: 1px solid var(--clr-border-bg);
  border-radius: var(--radius-md);

  transition: all .2s ease;
}

.technology-container .technology-card:hover {
  border: 1px solid var(--clr-border);
  background-color: rgba(35, 35, 35, 1);
}

.technology-container .technology-icon {
  width: 3.5rem;
  height: 3.5rem;
  padding: var(--space-sm);

  border-radius: var(--radius-md);

  display: flex;
  align-items: center;
  justify-content: center;
}

.technology-container .technology-icon img {
  width: 100%;
  object-fit: cover;
}

.technology-container h4 {
  font-size: var(--fs-lg);
  color: var(--clr-text-primary);
  font-weight: var(--fw-medium);
  line-height: 1.75;
}

.technology-container p {
  font-size: var(--fs-sm);
  color: var(--clr-text-secondary);
  font-weight: var(--fw-regular);
}

/* ============ CARD BACKGROUND COLORS ============ */

.html { background-color: rgba(240, 93, 43, 0.2); }
.css { background-color: rgba(53, 170, 221, 0.2); }
.bootstrap { background-color: rgba(118, 81, 177, 0.2); }
.javascript { background-color: rgba(254, 197, 40, 0.2); }
.react { background-color: rgba(97, 218, 251, 0.2); }
.python { background: linear-gradient(135deg, rgba(253, 213, 47, 0.2) 0%, rgba(43, 114, 188, 0.2) 100%); }
.flask { background-color: rgba(96, 125, 139, 0.2); }
.django { background-color: rgba(15, 89, 54, 0.2); }
.postman { background-color: rgba(252, 110, 61, 0.2); }
.figma { background-color: rgba(24, 62, 47, 0.2); }

/* ============ MEDIA QUERIES  ============ */

@media (max-width: 1024px) {

  .projects-container {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

}

@media (max-width: 768px) {

  .technology-container {
    grid-template-columns: repeat(2, minmax(0, 1fr)); 
  }

  .projects-container {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }

}

@media (max-width: 640px) {

  main {
    padding: 0 1rem;
  }

  .nav-bar .text {
    display: none;
  }

  .nav-bar .icon {
    display: inline-block;
    }

  .nav-bar .icon:hover {
    filter: drop-shadow(0 0 5px rgba(255, 255, 255, 1));
    transition: filter 0.2s ease;
  }

  .nav-bar ul {
    padding: var(--space-sm) var(--space-lg);
    gap: var(--space-lg);
  }

  .nav-bar li a {
    width: auto;
  }

  .technology-container {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }

  }

  @media (max-width: 425px) {

  .socials a {
    gap: var(--space-xs);
    font-size: var(--fs-sm);
    padding: var(--space-sm) var(--space-md);
  }

  .github img {
    width: 20px;
  }

}

